--- a/postfixReceive.html
+++ b/postfixReceive.html
@@ -144,7 +144,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
           <li><a href="postfixRelay.html" class=two>Adding a Postfix server for relay to O365</a></li>
           <li><a href="postfixConfig.html" class=two>Advanced Postfix configuration</a></li>
           <li><a href="postfixRouting.html" class=two>Postfix routing by filtering</a></li>
-          <li><a href="postfixReceive.html" class=two>Postfix Receive and Forward</li>
+          <li><a href="postfixReceive.html" class=two>Postfix Receive and Forward</a></li>
           <br>
         Up to now, my focus with Postfix has been on relaying mails from the LAN out to Office365. Everything I've thrown at Postfix it has been able to handle, but when it comes to Postfix receiving there is very little information and the proposed solutions tend to be complicated, like running 2 versions of Postfix on the same server.<br>
           <br>
