--- a/postfixReceive.html
+++ b/postfixReceive.html
@@ -137,7 +137,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
      
 	      
 
-         <div class=headline>Installing and configuring PHPMailer</div>
+         <div class=headline>Postfix Receive and Forward</div>
 	      <div class=datestamp>27-Jun-24</div>
         <div class=content><br>
     <b>Postfix Articles</b><br>
