--- a/phpMailer.html
+++ b/phpMailer.html
@@ -149,6 +149,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
           Rename the folder to PHPMailer if not already called that, then create a script that calls the function and sends a mail:<br>
           <br>
           <div class=code>
+		  <?php<br>
 use PHPMailer\PHPMailer\PHPMailer;<br>
 use PHPMailer\PHPMailer\Exception;<br>
 use PHPMailer\PHPMailer\SMTP;<br>
