--- a/phpMailer.html
+++ b/phpMailer.html
@@ -149,7 +149,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
           Rename the folder to PHPMailer if not already called that, then create a script that calls the function and sends a mail:<br>
           <br>
           <div class=code>
-		  <?php<br>
+		  &lt;?php<br>
 use PHPMailer\PHPMailer\PHPMailer;<br>
 use PHPMailer\PHPMailer\Exception;<br>
 use PHPMailer\PHPMailer\SMTP;<br>
@@ -202,7 +202,7 @@ try {<br>
     echo "Message could not be sent. Mailer Error: {$mail->ErrorInfo}";<br>
 }<br>
 <br>
-?><br>
+?&gt;<br>
 
 
           </div>
