--- a/phpMailer.html
+++ b/phpMailer.html
@@ -144,7 +144,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
           <br>
           While I primarily use PowerShell for mail-sending scripts, it's always a good idea to have a backup and it's fun to learn new tricks.<br>
           <br>
-  The preferred method for installing is to use <a href='https://getcomposer.org/'>Composer</a>, but unfortunately, I couldn't use this as it doesn't support an authenticated web proxy. The other way to install is to download a Zip file, which should be unpacked to the PHP web root, so with IIS this is typically c:\intersrv\wwwroot\.<br>
+  The preferred method for installing is to use <a href='https://getcomposer.org/'>Composer</a>, but unfortunately, I couldn't use this as it doesn't support an authenticated web proxy. The other way to install is to download a Zip file, which should be unpacked to the PHP web root, so with IIS this is typically c:\inetpub\wwwroot\.<br>
           <br>
           Rename the folder to PHPMailer if not already called that, then create a script that calls the function and sends a mail:<br>
           <br>
