--- a/occam.html
+++ b/occam.html
@@ -171,7 +171,7 @@ After 8 years with my Giant Talon 0 2016 it was finally time to upgrade my mount
           The bike retails for €2,800 but with a promo I managed to get it delivered for €2,460. Although I couldn't customise the bike via the Orbea website it does give me the budget to upgrade the brakes to <a href='https://www.bike-discount.de/en/shimano-xt-br-m8120-disc-brake-set'>Shimano XT BR-M8120</a>.<br>
           <br>
          The main upgrades over the previous bike for me are:<br>
-          - Full suspension makes for a much smoother ride.<br>
+          - Full suspension makes for a much smoother ride, times on Strava segments are about 15-20% faster.<br>
 	  - Larger fork travel, 100mm to 140mm.<br>
           - Dropper post with remote lock.<br>
           - Upgrade from wheel skewer to thru axle. This might not sound like a big upgrade but if you transport your bike by taking off the front wheel it is.<br>
