--- a/canyonRoadlite.html
+++ b/canyonRoadlite.html
@@ -143,10 +143,14 @@ a.two:hover {color: #447EAE; text-decoration: none;}
         <div class=content><br>
   I hadn't bought a new bike in 6 years before replacing my mountain bike in February this year, now I decided to replace my everyday bike, which I bought in June 2010.<br>
           <br>
-          The Canyon Roadlite 6 wasn't my preferred Roadlite choice but the 5 and 7 were sold out in my size. The sale price for the Roadlite was good and with a few accessories the total came in at just under €1100.<br>
+          The Canyon Roadlite 6 wasn't my preferred Roadlite choice but the 5 and 7 were sold out in my size. The sale price for the Roadlite was good and with a few accessories, the total came in at just under €1100.<br>
           <br>
-          My previous bike was a recomendation from an Austrian colleague, and it proved to be a very good buy over the years. But parts for it are hard to source now, and while I liked the gear range of a triple crank, there was always issues with it due to a design flaw.<br>
+          My previous bike was a recommendation from an Austrian colleague, and it proved to be a very good buy over the years. But parts for it are hard to source now, and while I liked the gear range of a triple crank, there was always issues with it due to a design flaw.<br>
           <br>
+			
+		<img src=canyonRoadlite01.png class=ImageMain>
+		<div class=ImageCaption>↑ Canyon Roadlite 6 2024.</div>
+		<br>
           So how exactly has it changed:<br>
           <br>
           <table><tr><th></th><th>Giant Defy 3.0 2010</th><th>Canyon Roadlite 6 2024</th></tr>
