--- a/canyonRoadlite.html
+++ b/canyonRoadlite.html
@@ -138,7 +138,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
      
 	      
 
-         <div class=headline>Canyon Roadlite 6.0</div>
+         <div class=headline>Canyon Roadlite 6</div>
 	      <div class=datestamp>27-Jun-24</div>
         <div class=content><br>
   I hadn't bought a new bike in 6 years before replacing my mountain bike in February this year, now I decided to replace my everyday bike, which I bought in June 2010.<br>
@@ -153,7 +153,8 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		<br>
           So how exactly has it changed:<br>
           <br>
-          <table><tr><th></th><th>Giant Defy 3.0 2010</th><th>Canyon Roadlite 6 2024</th></tr>
+          <table style="font-family:verdana; font-size:12px; color:#564c4d;" class=table1>
+		  <tr><th></th><th>Giant Defy 3.0 2010</th><th>Canyon Roadlite 6 2024</th></tr>
           <tr><td>Cost</td><td>€708 (€903 adjusted for inflation)</td><td>€1093</td></tr>
           <tr><td>Wheels</td><td>Giant OEM</td><td>Alex Rims CRD30 / Shimano TX505</td></tr>
           <tr><td>Tyres</td>Vittoria Zaffiro 23mm (25mm possible)<td></td><td>30mm Schwalbe G-One Speed</td></tr>
