--- a/canyonRoadlite.html
+++ b/canyonRoadlite.html
@@ -157,7 +157,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		  <tr><th></th><th>Giant Defy 3.0 2010</th><th>Canyon Roadlite 6 2024</th></tr>
           <tr><td>Cost</td><td>€708 (€903 adjusted for inflation)</td><td>€1093</td></tr>
           <tr><td>Wheels</td><td>Giant OEM</td><td>Alex Rims CRD30 / Shimano TX505</td></tr>
-          <tr><td>Tyres</td>Vittoria Zaffiro 23mm (25mm possible)<td></td><td>30mm Schwalbe G-One Speed</td></tr>
+          <tr><td>Tyres</td><td>Vittoria Zaffiro 23mm (25mm possible)</td><td>30mm Schwalbe G-One Speed</td></tr>
           <tr><td>Fork</td><td>Giant Composite</td><td>Canyon FK0049 Disc</td></tr>
           <tr><td>Groupset</td><td>Shimano Sora</td><td>Shimano Deore/SLX</td></tr>
           <tr><td>Shifters</td><td>Sora (non STI)</td><td>Shimano Deore M6100 12s</td></tr>
