--- a/canyonRoadlite.html
+++ b/canyonRoadlite.html
@@ -145,7 +145,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
           <br>
           The Canyon Roadlite 6 wasn't my preferred Roadlite choice but the 5 and 7 were sold out in my size. The sale price for the Roadlite was good and with a few accessories, the total came in at just under €1100.<br>
           <br>
-          My previous bike was a recommendation from an Austrian colleague, and it proved to be a very good buy over the years. But parts for it are hard to source now, and while I liked the gear range of a triple crank, there was always issues with it due to a design flaw.<br>
+          My previous bike was a recommendation from an Austrian colleague, and it proved to be a very good buy over the years, I clocked up 19,400KM on Strava and probably a lot more with short rides. But parts for it are hard to source now, and while I liked the gear range of a triple crank, there were always issues with it due to a design flaw.<br>
           <br>
 			
 		<img src=canyonRoadlite01.png class=ImageMain>
