--- a/canyonRoadlite.html
+++ b/canyonRoadlite.html
@@ -159,7 +159,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
           <tr><td>Wheels</td><td>Giant OEM</td><td>Alex Rims CRD30 / Shimano TX505</td></tr>
           <tr><td>Tyres</td><td>Vittoria Zaffiro 23mm (25mm possible)</td><td>30mm Schwalbe G-One Speed</td></tr>
           <tr><td>Fork</td><td>Giant Composite</td><td>Canyon FK0049 Disc</td></tr>
-          <tr><td>Groupset</td><td>Shimano Sora</td><td>Shimano Deore/SLX</td></tr>
+          <tr><td>Groupset</td><td>Shimano Sora (3400 series)</td><td>Shimano Deore/SLX</td></tr>
           <tr><td>Shifters</td><td>Sora (non STI)</td><td>Shimano Deore M6100 12s</td></tr>
           <tr><td>Brakes</td><td>Tektro Giant specific Dual Pivot</td><td>Shimano MT201 / UR300 (rotor Shimano RT10)​</td></tr>
           <tr><td>Cassette</td><td>Shimano HG50 12-25 - 9 Speed - Shimano Sora (3400 9sp)</td><td>Shimano SLX M7100 (10-51 12sp)</td></tr>
