--- a/canyonRoadlite.html
+++ b/canyonRoadlite.html
@@ -171,9 +171,9 @@ a.two:hover {color: #447EAE; text-decoration: none;}
           <br>
 		<br>
           My main thoughts on the new bike are:<br>
-		<li>Wider wheels make for a much better ride, far more versatile for rides as well.</li>
+		<li>Wider wheels make for a much better ride, far more versatile for different rides as well.</li>
 		<li>Much prefer having no front derailleur and a large range of gears on the rear cassette.</li>
-		<li>Not mad about the colour, but didn't really have a choice as other Roadlites were sold out.</li>
+		<li>Not mad about the colour, but I didn't have a choice as other Roadlites were sold out.</li>
 		<li>Would have preferred a tru-axle over a quick release, but again no option for that.</li>
           <br>
 		<br>
