--- a/postfixConfig.html
+++ b/postfixConfig.html
@@ -138,7 +138,13 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 
          <div class=headline>Advanced Postfix Config</div>
 	      <div class=datestamp>17-Jun-24</div>
-        <div class=content><br>
+        <div class=content><be>
+		<b>Postfix Articles</b><br>
+          <li><a href="postfixRelay.html" class=two>Adding a Postfix server for relay to O365</a></li>
+          <li><i>Advanced Postfix configuration</i></li>
+          <li><a href="postfixRouting.html" class=two>Postfix routing by filtering</a></li>
+          <li><a href="postfixReceive.html" class=two>Postfix Receive and Forward</a></li>
+          <br>
 Having <a href='https://smwk.github.io/postfixRelay.html'>setup Postfix</a> recently I found the process very straightforward, with a lot of options for configuration. Deciding to dig a bit deeper I looked at the following advanced settings:<br>
           <br>
           <li><A href="#anchor-one">Full certificate chain</A></li>
