--- a/postfixConfig.html
+++ b/postfixConfig.html
@@ -138,7 +138,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 
          <div class=headline>Advanced Postfix Config</div>
 	      <div class=datestamp>17-Jun-24</div>
-        <div class=content><be>
+        <div class=content><br>
 		<b>Postfix Articles</b><br>
           <li><a href="postfixRelay.html" class=two>Adding a Postfix server for relay to O365</a></li>
           <li><i>Advanced Postfix configuration</i></li>
