--- a/postfixRelay.html
+++ b/postfixRelay.html
@@ -135,7 +135,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 
          <div class=headline>Adding a Postfix server for relay to O365</div>
 	      <div class=datestamp>08-Jun-24</div>
-        <div class=content><be>
+        <div class=content><br>
 		<b>Postfix Articles</b><br>
           <li><i>Adding a Postfix server for relay to O365</i></li>
           <li><a href="postfixConfig.html" class=two>Advanced Postfix configuration</a></li>
