--- a/canyonRoadlite.html
+++ b/canyonRoadlite.html
@@ -162,8 +162,8 @@ a.two:hover {color: #447EAE; text-decoration: none;}
           <tr><td>Groupset</td><td>Shimano Sora (3400 series)</td><td>Shimano Deore/SLX</td></tr>
           <tr><td>Shifters</td><td>Sora (non STI)</td><td>Shimano Deore M6100 12s</td></tr>
           <tr><td>Brakes</td><td>Tektro Giant specific Dual Pivot</td><td>Shimano MT201 / UR300 (rotor Shimano RT10)​</td></tr>
-          <tr><td>Cassette</td><td>Shimano HG50 12-25 - 9 Speed - Shimano Sora (3400 9sp)</td><td>Shimano SLX M7100 (10-51 12sp)</td></tr>
-          <tr><td>Cranks</td><td>FSA Omega MegaExo, 30/39/50</td><td>SAMOX TAM37 46T </td></tr>
+          <tr><td>Cassette</td><td>Shimano Sora 3400 (12-25 9sp)</td><td>Shimano SLX M7100 (10-51 12sp)</td></tr>
+          <tr><td>Cranks</td><td>FSA Omega MegaExo, 30/39/50</td><td>SAMOX TAM37 46T</td></tr>
           <tr><td>Handlebars</td><td>Giant Connect</td><td>Canyon Iridium Flatbar 600mm (Ergon GA3 grips)</td></tr>
           <tr><td>Sadle</td><td>Giant OEM</td><td>Canyon Sport Saddle EP1249</td></tr>
           <tr><td>Weight</td><td>10.6KG</td><td>10.6KG</td></tr>
