--- a/canyonRoadlite.html
+++ b/canyonRoadlite.html
@@ -158,7 +158,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
           <tr><td>Cost</td><td>€708 (€903 adjusted for inflation)</td><td>€1093</td></tr>
           <tr><td>Wheels</td><td>Giant OEM, QR axle</td><td>Alex Rims CRD30 / Shimano TX505, QR axle</td></tr>
           <tr><td>Tyres</td><td>23mm Vittoria Zaffiro (25mm possible)</td><td>30mm Schwalbe G-One Speed (32mm possible)</td></tr>
-          <tr><td>Fork</td><td>Giant Composite</td><td>Canyon FK0049 Disc</td></tr>
+          <tr><td>Fork</td><td>Giant Composite</td><td>Canyon FK0049 Disc (Carbon Fibre)</td></tr>
           <tr><td>Groupset</td><td>Shimano Sora (3400 series)</td><td>Shimano Deore/SLX</td></tr>
           <tr><td>Shifters</td><td>Sora (non STI)</td><td>Shimano Deore M6100 12s</td></tr>
           <tr><td>Brakes</td><td>Tektro Giant specific Dual Pivot</td><td>Shimano MT201 / UR300 (rotor Shimano RT10)​</td></tr>
