--- a/phpMailer.html
+++ b/phpMailer.html
@@ -180,15 +180,15 @@ try {<br>
 <br>
     //Recipients<br>
     $mail->setFrom('php@domain.com', 'PHP Mailer');<br>
-    $mail->addAddress('useer@domain.com', 'David Foley');<br>
-#    $mail->addAddress('ellen@example.com');<br>
+    $mail->addAddress('user@domain.com', 'First Surname');<br>
+#    $mail->addAddress('john@example.com');<br>
 #    $mail->addReplyTo('info@example.com', 'Information');<br>
 #    $mail->addCC('cc@example.com');<br>
 #    $mail->addBCC('bcc@example.com');<br>
 <br>
     //Attachments
-#    $mail->addAttachment('/var/tmp/file.tar.gz');<br>
-#    $mail->addAttachment('/tmp/image.jpg', 'new.jpg');<br>
+#    $mail->addAttachment('c:/scripts/file.txt');<br>
+#    $mail->addAttachment('c:/scripts/image.jpg', 'new.jpg');<br>
 <br>
     //Content
     $mail->isHTML(true); <br>
