--- a/canyonRoadlite.html
+++ b/canyonRoadlite.html
@@ -166,7 +166,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
           <tr><td>Cranks</td><td>FSA Omega MegaExo, 30/39/50</td><td>SAMOX TAM37 46T</td></tr>
           <tr><td>Handlebars</td><td>Giant Connect</td><td>Canyon Iridium Flatbar 600mm (Ergon GA3 grips)</td></tr>
           <tr><td>Sadle</td><td>Giant OEM</td><td>Canyon Sport Saddle EP1249</td></tr>
-          <tr><td>Weight</td><td>10.04KG</td><td>10.6KG</td></tr>
+          <tr><td>Weight</td><td>10.04KG</td><td>10.62KG</td></tr>
           </table>
           <br>
 		<br>
@@ -175,6 +175,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		<li>Much prefer having no front derailleur and a large range of gears on the rear cassette.</li>
 		<li>Not mad about the colour, but I didn't have a choice as other Roadlites were sold out.</li>
 		<li>Would have preferred a tru-axle over a quick release, but again no option for that.</li>
+		<li>As always with Canyon the front brakes are on the left handle. Fortunately with the brakes supplies it's easy to switch them over.</li>
           <br>
 		<br>
         
