--- a/canyonRoadlite.html
+++ b/canyonRoadlite.html
@@ -175,7 +175,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		<li>Much prefer having no front derailleur and a large range of gears on the rear cassette.</li>
 		<li>Not mad about the colour, but I didn't have a choice as other Roadlites were sold out.</li>
 		<li>Would have preferred a tru-axle over a quick release, but again no option for that.</li>
-		<li>As always with Canyon the front brakes are on the left handle. Fortunately with the brakes supplies it's easy to switch them over.</li>
+		<li>As always with Canyon the front brakes are on the left handle. Fortunately with the brakes supplied it's easy to switch them over.</li>
           <br>
 		<br>
         
