--- a/postfixConfig.html
+++ b/postfixConfig.html
@@ -244,6 +244,8 @@ smtp_tls_CAfile = /etc/ssl/inter_cert.cer<br>
 			Also, settings can be stored in the following locations:<br>
 			/etc/wgetrc<br>
 			~/.wgetrc<br>
+			<br>
+			* Don't put wget proxy settings in double-quotes.<br>
 		</div>
 		<br>
 		If you don't want to worry about password changes then I would suggest setting up a service account in Active Directory and setting the password to never expire.<br>
