--- a/canyonRoadlite.html
+++ b/canyonRoadlite.html
@@ -181,7 +181,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
         <b>Maintenance</b><be>
 	So far the only adjustment I've needed was the low gear not staying in the biggest cog of the cassette. Adjusting the high and low screws can be difficult with Shimano because the screw was previously a Japanese standard and not a Phillips head like most people think.<be>
 		<be>
-	The screw is now a standard hex key, so the only issue you might have is when the screw begins to rust after a few years.<br>
+	The screw is now a standard hex key (2mm), so the only issue you might have is when the screw begins to rust after a few years.<br>
 		         <br>
 			
 		<img src=canyonRoadlite02.png class=ImageMain>
