--- a/canyonRoadlite.html
+++ b/canyonRoadlite.html
@@ -187,7 +187,9 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		<img src=canyonRoadlite02.png class=ImageMain>
 		<div class=ImageCaption>↑ You can just about make out that the High (H) is on the right, above the Low (L).</div>
 		<br>
-          Something I regularly forget is which screw looks after the big cog in the cassette and which looks after the small cog. Adjust the Low (L) screw for the small cog and the High (H) if the chain shifts too far over on the large cog.<be>
+          Something I regularly forget is which screw looks after the big cog in the cassette and which looks after the small cog. Adjust the Low (L) screw for the largest cog and the High (H) if the chain shifts too far over on the small cog.<br>
+			<br>
+			Probably the most common issue is the chain not sticking in the largest cog, so adjust the Low screw counter-clockwise.<br>
 			<br><br>
           </div>
           
