--- a/canyonRoadlite.html
+++ b/canyonRoadlite.html
@@ -178,7 +178,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		<li>As always with Canyon the front brakes are on the left handle. Fortunately with the brakes supplied it's easy to switch them over.</li>
           <br>
 		<br>
-        <b>Maintenance</b><be>
+        <b>Maintenance</b><br>
 	So far the only adjustment I've needed was the low gear not staying in the biggest cog of the cassette. Adjusting the high and low screws can be difficult with Shimano because the screw was previously a Japanese standard and not a Phillips head like most people think.<be>
 		<be>
 	The screw is now a standard hex key (2mm), so the only issue you might have is when the screw begins to rust after a few years.<br>
