--- a/postfixRouting.html
+++ b/postfixRouting.html
@@ -197,7 +197,7 @@ smtp_sasl_auth_enable = yes <i># this won't affect your smart-host config</i><br
 		  <br>
           One thing to keep in mind is the 'from' address has to match the HVE account. So if you have an app that limits what address you can use you might want to look at Postfix's address rewrite.<br>
           <br>
-          Using smtp_generic_mpas we can rewrite both from and to addresses. First, we set our main.cf file:<br>
+          Using smtp_generic_maps we can rewrite both from and to addresses. First, we set our main.cf file:<br>
 		  <br>
 		  <div class=code>
 		/etc/postfix/main.cf<br>
