--- a/installExchange2019.html
+++ b/installExchange2019.html
@@ -144,9 +144,16 @@ Originally I was going to install Exchange 2019, but there were a few reasons no
 		<li>While it was originally planned just to turn off the server, the customer had a requirement to restore backups from tape up until Exchange 2016/19 goes end-of-life in October 2025. The restore server Exchange version must match the version of the backup.</li>
 
 		<br>
-	So this only left Exchange 2016 as an option, this also means Windows Server 2016 is also the only option for OS. As it will need to do mailbox restores I gave the server 16GB RAM. For now until October 2025 I will keep the server off except for monthly updates and any restore requests that come in.<br>
+	So this only left Exchange 2016 as an option, this also means Windows Server 2016 is also the only option for OS. For now, until October 2025, I will keep the server off except for monthly updates and any restore requests that come in.<br>
 <br>
-          
+          With the requirements decided it was time to install and configure Exchange, but first I had the following problems:<br>
+		<br>
+		<b>Issue 1:</b> my manager is trying to restrict access from the Landing Zone to LAN as much as possible but with Exchange you need to have unrestricted access to other Exchange servers and Domain Controllers no matter what site they reside in. It took a bit of convincing just to get the rule to allow unrestricted access to other Exchange servers.<br>
+		When I went to install Exchange I got an error at the Mailbox Transport section. Once this happened I got the firewall admin to change the rule to include Domain Controllers, but still, I got the same error when resuming the install, even a reboot wouldn't help.<br>
+		After researching I found the best option was to uninstall what was there via the command prompt, then install again via command prompt. This worked for the most part until I ran into issue 2.<br>
+		<br>
+		<b>Issue 2:</b> the server requirement for an Exchange 2016 with Mailbox role calls for a minimum 8GB of RAM. To cut down on running costs we went for an image with 8GB, but I found out on the install that the server had reached a critical lack of memory just as Exchange was on the finishing up part. After a reboot there were still issues with memory so I asked the Azure admin to change the image to a 16GB version.<br>
+		
   <br>
   
 
