--- a/installExchange2019.html
+++ b/installExchange2019.html
@@ -153,6 +153,12 @@ Originally I was going to install Exchange 2019, but there were a few reasons no
 		After researching I found the best option was to uninstall what was there via the command prompt, then install again via command prompt. This worked for the most part until I ran into issue 2.<br>
 		<br>
 		<b>Issue 2:</b> the server requirement for an Exchange 2016 with Mailbox role calls for a minimum 8GB of RAM. To cut down on running costs we went for an image with 8GB, but I found out on the install that the server had reached a critical lack of memory just as Exchange was on the finishing up part. After a reboot there were still issues with memory so I asked the Azure admin to change the image to a 16GB version.<br>
+
+ <br>
+			
+		<img src=installExchange201901.png class=ImageMain>
+		<div class=ImageCaption>↑ Exchange 2016 doesn't really work with 8GB of memory.</div>
+		<br>
 		
   <br>
   
