--- a/powershellCore.html
+++ b/powershellCore.html
@@ -154,29 +154,44 @@ a.two:hover {color: #447EAE; text-decoration: none;}
           <li>Importing Modules issues</li>
           <br>
           <b>Replace PowerShellGet with PSResourceGet</b><br>
-          Installing Modules with the default v1 PowerShellGet module is a frustrating experience, more so if you only have TLS 1.2 enabled on your server and have an authenticated proxy. PSResourceGet is actually version 3 of PowerShellGet but the owners decided to rename it. To install run the following:<br>
+          Installing Modules with the default v1 PowerShellGet module is a frustrating experience, more so if you only have TLS 1.2 enabled on your server and have an authenticated proxy. PSResourceGet is actually version 3 of PowerShellGet but the owners decided to rename it. 
+		Before getting into the install first check your Internet connection is up and running:<br>
+		<br>
+		          <div class=code>
+	  [PowerShell Core run as Admin]<br>
+	  ==============================<br>
+	  [Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tls12<br>
+		<br>
+	 invoke-webrequest -uri https://google.com
+          </div> 
+		<br>
+		To install run the following:<br>
           <br>
           <div class=code>
-          Install-Module -Name Microsoft.PowerShell.PSResourceGet -RequiredVersion 1.0.5
+	  Install-Module -Name Microsoft.PowerShell.PSResourceGet -RequiredVersion 1.0.5<br>
           </div> 
           <br>
-          When installing modules you should install for allusers, this means if you run scheduled tasks using a different account it will use the same module that you would use in testing:<br>
+          When installing modules you should install them for all users, this means if you run scheduled tasks using a different account it will use the same module that you would use in testing:<br>
           <br>
           <div class=code>
-          Install-Module -Name MicrosoftTeams -Scope AllUsers
+          Install-Module -Name MicrosoftTeams -Scope AllUsers<br>
+	  Update-PSResource PSFramework -Scope allusers<br>  
+	  Update-PSResource PackageManagement -Scope allusers<br>
           </div> 
           <br>
           One thing to note is when you update a module it will leave the old version installed, so it's probably a good idea to cleanup the old versions with the following command:<br>
           <div class=code>
-          TBC
+          Uninstall-PSResource PSFramework -Version 0.9.25.107 -Scope allusers -SkipDependencyCheck
           </div> 
           <br> 
-          Finally, if we want to list the installed modules and also check if there is a newer versions we have these commands:<br>
+          Finally, if we want to list the installed modules and also check if there is a newer version we have these commands:<br>
           <div class=code>
-          TBC
+          Get-InstalledPSResource -Scope AllUsers<br>
+          Find-PSResource -Name az -Repository PSGallery<br>
           </div> 
           <br>  
-
+	<b>Other General Tips</b><br>
+		<li>Don't import modules like Microsoft.Graph, it will take about 15 minutes and when you run commands like Connect-MgGraph it will automatically import the bits it needs.</li>
           
 			<br><br>
           </div>
