--- a/powershellCore.html
+++ b/powershellCore.html
@@ -151,18 +151,19 @@ a.two:hover {color: #447EAE; text-decoration: none;}
           <li>Replace PowerShellGet with PSResource</li>
           <li>Install modules for all users</li>
           <li>Converting scheduled tasks from 5.1 to Core</li>
-          <li>Importing Modules issues</li>
+          <li>Other general tips</li>
           <br>
           <b>Replace PowerShellGet with PSResourceGet</b><br>
           Installing Modules with the default v1 PowerShellGet module is a frustrating experience, more so if you only have TLS 1.2 enabled on your server and have an authenticated proxy. PSResourceGet is actually version 3 of PowerShellGet but the owners decided to rename it. 
-		Before getting into the install first check your Internet connection is up and running:<br>
+		Before getting into the install first, check your Internet connection is up and running:<br>
 		<br>
 		          <div class=code>
 	  [PowerShell Core run as Admin]<br>
 	  ==============================<br>
 	  [Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tls12<br>
+	[System.Net.Http.HttpClient]::DefaultProxy.Credentials = [System.Net.CredentialCache]::DefaultCredentials <i># Use local credentials for proxy authentication</i><br>
 		<br>
-	 invoke-webrequest -uri https://google.com
+	 Invoke-WebRequest -uri https://google.com<br>
           </div> 
 		<br>
 		To install run the following:<br>
@@ -171,6 +172,8 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	  Install-Module -Name Microsoft.PowerShell.PSResourceGet -RequiredVersion 1.0.5<br>
           </div> 
           <br>
+		<br>
+	<b>Install modules for all users</b><br>
           When installing modules you should install them for all users, this means if you run scheduled tasks using a different account it will use the same module that you would use in testing:<br>
           <br>
           <div class=code>
@@ -189,7 +192,22 @@ a.two:hover {color: #447EAE; text-decoration: none;}
           Get-InstalledPSResource -Scope AllUsers<br>
           Find-PSResource -Name az -Repository PSGallery<br>
           </div> 
-          <br>  
+		          <br> 
+		<br>
+	<b>Converting scheduled tasks from 5.1 to Core</b><br>
+	When creating scheduled tasks that use PowerShell I always use Notepad to write down the commands before editing the task, this prevents typos and other types of errors. It's also useful to have the service account password handy as you will need it for each edited task. The only changes you will need to make are changing the PowerShell executable and the script command:<br>
+		<br>
+		          <div class=code>
+          Program: "C:\Program Files\PowerShell\7\pwsh.exe"<br>
+	Arguments: -ExecutionPolicy ByPass -File "C:\Scripts\Exchange\script.ps1"<br>		  
+          </div> 
+     		         <br>
+			
+		<img src=powershellCore01.png class=ImageMain>
+		<div class=ImageCaption>↑ The 'Arguments' field is very small, so better to edit in Notepad first.</div>
+		<br>
+		
+		<br>
 	<b>Other General Tips</b><br>
 		<li>Don't import modules like Microsoft.Graph, it will take about 15 minutes and when you run commands like Connect-MgGraph it will automatically import the bits it needs.</li>
           
