--- a/installExchange2019.html
+++ b/installExchange2019.html
@@ -171,7 +171,7 @@ Originally I was going to install Exchange 2019, but there were a few reasons no
 		TBC<br>
 		</div>
 		<br>
-		<b>Issue 2:</b> the server requirement for an Exchange 2016 with Mailbox role calls for a minimum 8GB of RAM. To cut down on running costs we went for an image with 8GB, but I found out on the install that the server had reached a critical lack of memory just as Exchange was on the finishing up part. After a reboot there were still issues with memory so I asked the Azure admin to change the image to a 16GB version.<br>
+		<b>Issue 2:</b> the <a href='https://learn.microsoft.com/en-us/exchange/plan-and-deploy/system-requirements?view=exchserver-2016'>server requirements</a> for an Exchange 2016 with Mailbox role calls for a minimum 8GB of RAM. To cut down on running costs we went for an image with 8GB, but I found out on the install that the server had reached a critical lack of memory just as Exchange was on the finishing up part. After a reboot there were still issues with memory so I asked the Azure admin to change the image to a 16GB version.<br>
 
  <br>
 			
