--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
   <div class="dropdown-content" style='line-height: 1.6;'>
 	  <details open>
 		    <summary><b>2024</b><br></summary>
+		  <a href="azureVM.html" class=two>List Azure Virtual Machines via PowerShell</a><br>
 		  <a href="powershellCore.html" class=two>Moving from PowerShell 5.1 to Core</a><br>
 		  <a href="canyonRoadlite.html" class=two>Canyon Roadlite 6 2024</a><br>
 		  <a href="postfixReceive.html" class=two>Postfix Receive and Forward</a><br>
@@ -137,6 +138,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	      <table class=indexTable> 
 		      <br>
 		     <tr><td> <br><b>2024</b></td><td></td></tr>
+	<tr><td><a href="azureVM.html" class=two>List Azure Virtual Machines via PowerShell</a><br></td><td>13-Jul-24</td></tr>
 	<tr><td><a href="powershellCore.html" class=two>Moving from PowerShell 5.1 to Core</a><br></td><td>12-Jul-24</td></tr>
 	<tr><td><a href="canyonRoadlite.html" class=two>Canyon Roadlite 6 2024</a><br></td><td>27-Jun-24</td></tr>
 	<tr><td><a href="postfixReceive.html" class=two>Postfix Receive and Forward</a><br></td><td>27-Jun-24</td></tr>
