--- a/powershellCore.html
+++ b/powershellCore.html
@@ -79,6 +79,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
   <div class="dropdown-content" style='line-height: 1.6;'>
 	  <details open>
 		    <summary><b>2024</b><br></summary>
+		  <a href="azureVM.html" class=two>List Azure Virtual Machines via PowerShell</a><br>
 		   <a href="powershellCore.html" class=two>Moving from PowerShell 5.1 to Core</a><br>
 		  <a href="canyonRoadlite.html" class=two>Canyon Roadlite 6 2024</a><br>
 		  <a href="postfixReceive.html" class=two>Postfix Receive and Forward</a><br>
