--- a/links.html
+++ b/links.html
@@ -132,8 +132,11 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		<tr><td><td style='white-space:nowrap; font-size 12px;' class=tableContent><a href='https://blog.joeware.net/'>Joeware</a></td><td style='font-size 12px;' class=tableContent>Insights into AD.</td></tr>
 		<tr><td><td style='white-space:nowrap; font-size 12px;' class=tableContent><a href='https://mikecrowley.us/'>Mike Crowley MVP</a></td><td style='font-size 12px;' class=tableContent>PowerShell scripts for Azure and O365.</td></tr>
 		<tr><td><td style='white-space:nowrap; font-size 12px;' class=tableContent><a href='https://rakhesh.com/'>Rakhesh.com</a></td><td style='font-size 12px;' class=tableContent>Various articles on Azure.</td></tr>
+		<tr><td><td style='white-space:nowrap; font-size 12px;' class=tableContent><a href='https://powershellisfun.com/'>PowerShellIsFun.com</a></td><td style='font-size 12px;' class=tableContent>Regularly updated.</td></tr>
+		<tr><td><td style='white-space:nowrap; font-size 12px;' class=tableContent><a href='https://www.alitajran.com//'>AliTajran.com</a></td><td style='font-size 12px;' class=tableContent>Always has well explained articles with useful code examples.</td></tr>
 
-		   
+	
+
 		   
 		</table>
         <br><br> 
